test/errors/dict/copy_type_error.np
d = {1: 2}
d2 = {"one": "two"}
d2 = d.copy()
